# ClientChat

./: .gitignore  CMakeLists.txt  protocol.txt
gui/: client  server
server/: CMakeLists.txt
server/src/: application.cpp  application.hpp  broadcastagent.c  broadcastagent.cpp  broadcastagent.h  broadcastagent.hpp  clientthread.c  clientthread.cpp  clientthread.h  clientthread.hpp  cmdHelper.cpp  cmdHelper.hpp  connectionhandler.c  connectionhandler.cpp  connectionhandler.h  main.c  main.cpp  network.c  network.cpp  network.h  network.hpp  server.cpp  server.h  server.hpp  user.c  user.cpp  user.h  user.hpp  util.cpp
simple-client/: Makefile  README.md  message.h  simple-client.c
